2008-04-17  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile.am:
	* pkg/debian-common/rules:
	* pkg/ubuntu-gutsy/changelog:
	* pkg/ubuntu-gutsy/control:

	Add initial ubuntu gutsy package

2008-04-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wmv/wmv-wizard.glade:
	  Add kbit/s label

2008-03-06  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Mark the plugins as implementing IEncoderPlugin

2008-03-06  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Remove GPL headers

2008-03-04  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/asfparse.py:
	  Rename a packet type based on the documentation from MS.
	* flumotion/component/producers/wms/wms.py:
	  Note that MS now has docs available.

2008-02-26  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.py:
	  First phase of bringing this up to date for trunk component API.
	  Not yet tested.

2008-02-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/muxers/asf/asf.xml:
	Unbitrot and provide a muxer format

2008-02-26  Michael Smith <msmith@fluendo.com>

	* misc/pycheckerrc:
	  Have the same features/etc enabled here as in core flumotion. Makes us
	  pass pychecker again.

2008-02-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	  Apparently some API has changed.

2008-01-30  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Update to new wizard API
	
2008-01-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/wmv/wmv-wizard.glade:
	Allow bitrates up to 16348kbps
	
	* flumotion/component/encoders/wma/wma.xml: