@@ -1,4 +1,11 @@
-2008-04-17  Johan Dahlin  <jdahlin@async.com.br>
+2008-05-06  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/component/encoders/wma/wma_wizard.py:
+	* flumotion/component/encoders/wmv/wmv_wizard.py:
+	Remove redundant get_next method.
+	Update the rest of the API to the latest flumotion changes.
+
+2008-04-17  Johan Dahlin  <johan@flumotion.com>
 
 	* Makefile.am:
 	* pkg/debian-common/rules:
@@ -12,7 +19,7 @@
 	* flumotion/component/encoders/wmv/wmv-wizard.glade:
 	  Add kbit/s label
 
-2008-03-06  Johan Dahlin  <jdahlin@async.com.br>
+2008-03-06  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/component/encoders/wma/wma_wizard.py:
 	* flumotion/component/encoders/wmv/wmv_wizard.py:
